--- a/ai-lan/index2.html
+++ b/ai-lan/index2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><head>
+<!DOCTYPE html><head><head>
  
   
  	 
@@ -939,7 +939,7 @@ button.bleu {
  </div> 	<div class="bajo">
 	
 	<div class="ft3"> 
- 	<p>  <a href="https://scietex.com"><img src="https://lastoffer.net/tps://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="scietex.com"></a> </p>
+ 	<p>  <a href="https://scietex.com"><img src="https://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="scietex.com"></a> </p>
 </div>
 		
 	</div></div>
