--- a/blancolan/index.html
+++ b/blancolan/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><head>
+<!DOCTYPE html><head><head>
  
   
  	 
@@ -508,7 +508,7 @@ window.addEventListener(
 	</ol></div></div></div><section><div class="lan vinnare"><h2><div class="unskew">Topplista blancolån</div></h2></div><div class="cell rekommenderade"><p>Topplista för rekommenderade och utvalda  blancolån  2024. För hjälp att få okomplicerat  blancolån med hög servicenivå tipsar vi om följande: <ol class="reko"><li><a href=https://lastoffer.net/coop/>COOP</a><span class="separator"> – </span>Prisvärt och hållbart<span class="separator"> – </span>1-2 bankdagar</li><li><a href=https://lastoffer.net/banky/>Banky</a><span class="separator"> – </span>Utgår från din förmåga<span class="separator"> – </span>Lånet betalas ut inom 24h</li><li><a href=https://lastoffer.net/lanekoll/>Lånekoll</a><span class="separator"> – </span>Förbättra dina lån<span class="separator"> – </span>Direktutbetalning – du slipper vänta</li><li><a href=https://lastoffer.net/lan-lendo/>Lendo</a><span class="separator"> – </span>Jämför lån kostnadsfritt<span class="separator"> – </span>Beror på långivare</li></ol></div><div class="lan">
 <h2><div class="unskew">Erbjudande:  blancolån</div></h2>
 </div><div class="row"> <span class="tooltip" data-tooltip="Annonsörer på den här webbplatsen följer konsumentverkets rekommendationer för annonsering om lån och krediter.">?</span>
-<div class="list-item cell block"><div class="pophd"> COOP</div><span class="popl">populärt val</span><div class="img-wrapper"><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/coop.webp" width="300" height="auto" alt="COOP"></div></a><div class="table-container" style="min-width: fit-content;"><table class="table-container__table"><tbody>
+<div class="list-item cell block"><div class="pophd"> COOP</div><span class="popl">populärt val</span><div class="img-wrapper"><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/coop.webp" width="300" height="auto" alt="COOP"></div></a><div class="table-container" style="min-width: fit-content;"><table class="table-container__table"><tbody>
  <tr><th>Belopp</th> <td>15 000 - 500 000 kr</td></tr>
  <tr><th>Ränta</th>
 
@@ -534,7 +534,7 @@ button.bleu {
 </style>
 <div style="display:none"  id="showall" class="cell block">
 <ul class="showall">
-<li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/banky.webp" width="300" height="auto" alt="Banky"><br> <span class="lender-title"><a href="https://lastoffer.net/banky/"  >Banky blancolån</a>  - fast ränta 29 %</span><br><button class="btn-green lb"><a href="https://banky.se/" rel="sponsored" >Till ansökan</a></button><br>Annuitetslån 5 år. Effektiv årsränta 29,97%. Ett lån på 50 000 kr kostar då 1 512 kr/mån (60 avbetalningar), dvs totalt 83 675 kr. Ingen uppläggningsavgift eller aviavgifter. 26,50% nominell ränta. Räntan är rörlig. Banky samarbetar med Nordiska Kreditmarknadsaktiebolaget.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lanekoll.webp" width="300" height="auto" alt="Lånekoll"><br> <span class="lender-title"><a href="https://lastoffer.net/lanekoll/"  >Lånekoll blancolån</a> - från 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br>Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lendo.webp" width="300" height="auto" alt="Lendo"><br> <span class="lender-title"><a href="https://lastoffer.net/lan-lendo/"  >Lendo blancolån</a> - från 5,2 - 33,93 %</span><br><button class="btn-green lb"><a href="https://www.lendo.se/" rel="sponsored" >Till ansökan</a></button><br>Annuitetslån 12 år. Effektiv årsränta 6.98 %. Ett lån på 200 000 kr kostar då 2032 kr/månad (144 avbetalningar), dvs totalt 292 653 kr. Ingen start-/aviavgift. 6.77 % nominell ränta (rörlig ränta, sätts individuellt baserat på dina förutsättningar). Ansökan kommer att skickas till de kreditgivare som bäst matchar din profil, uppdaterat 2023-03-01. Återbetalningstid 1-15 år. Maximala räntan är 32,49%. Räntespann mellan: 3,25%-32,49%.</li>
+<li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/banky.webp" width="300" height="auto" alt="Banky"><br> <span class="lender-title"><a href="https://lastoffer.net/banky/"  >Banky blancolån</a>  - fast ränta 29 %</span><br><button class="btn-green lb"><a href="https://banky.se/" rel="sponsored" >Till ansökan</a></button><br>Annuitetslån 5 år. Effektiv årsränta 29,97%. Ett lån på 50 000 kr kostar då 1 512 kr/mån (60 avbetalningar), dvs totalt 83 675 kr. Ingen uppläggningsavgift eller aviavgifter. 26,50% nominell ränta. Räntan är rörlig. Banky samarbetar med Nordiska Kreditmarknadsaktiebolaget.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/lanekoll.webp" width="300" height="auto" alt="Lånekoll"><br> <span class="lender-title"><a href="https://lastoffer.net/lanekoll/"  >Lånekoll blancolån</a> - från 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br>Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/lendo.webp" width="300" height="auto" alt="Lendo"><br> <span class="lender-title"><a href="https://lastoffer.net/lan-lendo/"  >Lendo blancolån</a> - från 5,2 - 33,93 %</span><br><button class="btn-green lb"><a href="https://www.lendo.se/" rel="sponsored" >Till ansökan</a></button><br>Annuitetslån 12 år. Effektiv årsränta 6.98 %. Ett lån på 200 000 kr kostar då 2032 kr/månad (144 avbetalningar), dvs totalt 292 653 kr. Ingen start-/aviavgift. 6.77 % nominell ränta (rörlig ränta, sätts individuellt baserat på dina förutsättningar). Ansökan kommer att skickas till de kreditgivare som bäst matchar din profil, uppdaterat 2023-03-01. Återbetalningstid 1-15 år. Maximala räntan är 32,49%. Räntespann mellan: 3,25%-32,49%.</li>
 </ul></div>
 <script>function showlist() {
   var x = document.getElementById("showall");
@@ -591,7 +591,7 @@ button.bleu {
 	
 	<tr id="div0" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">COOP blancolån</a><br>Ränta 5,2 - 16,95 %</span><br><button class="btn-green lb"><a href="https://www.coop.se/bank-och-betalkort" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Vid 8,67 % rörlig ränta är den effektiva årsräntan 9,02 % för ett annuitetslån på 165 000 kr med 10 års återbetalningstid med tot. 120 återbetalningar, uppläggningsavgift 0 kr och aviavgift 0 kr med autogiro. Givet oförändrad ränta och aviavgift blir tot. belopp att återbetala 247 725 kr och månadskostnaden 2 072 kr. Individuell ränta 5,20%–16,95% (effektiv ränta 5,33%–25,46%). Kreditgivare MedMera Bank (2024-02-27).-</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/coop.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lanekoll/>Lånekoll</a> <p><button class="mminfo" id="bt1" onclick="myFunction('div1')">Läs mer</button></p></th>
+	 <span class="lender-title">COOP blancolån</a><br>Ränta 5,2 - 16,95 %</span><br><button class="btn-green lb"><a href="https://www.coop.se/bank-och-betalkort" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Vid 8,67 % rörlig ränta är den effektiva årsräntan 9,02 % för ett annuitetslån på 165 000 kr med 10 års återbetalningstid med tot. 120 återbetalningar, uppläggningsavgift 0 kr och aviavgift 0 kr med autogiro. Givet oförändrad ränta och aviavgift blir tot. belopp att återbetala 247 725 kr och månadskostnaden 2 072 kr. Individuell ränta 5,20%–16,95% (effektiv ränta 5,33%–25,46%). Kreditgivare MedMera Bank (2024-02-27).-</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/adbilder/coop.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lanekoll/>Lånekoll</a> <p><button class="mminfo" id="bt1" onclick="myFunction('div1')">Läs mer</button></p></th>
 <td>Direktutbetalning</td>
 <td>4.9</td>
 <td data-sort-value='10 000'>10 000 kr</td>
@@ -608,7 +608,7 @@ button.bleu {
 	
 	<tr id="div1" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Lånekoll blancolån</a><br>Ränta 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lanekoll.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lan-lendo/>Lendo</a> <p><button class="mminfo" id="bt2" onclick="myFunction('div2')">Läs mer</button></p></th>
+	 <span class="lender-title">Lånekoll blancolån</a><br>Ränta 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/lanekoll.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lan-lendo/>Lendo</a> <p><button class="mminfo" id="bt2" onclick="myFunction('div2')">Läs mer</button></p></th>
 <td>Ansök på 2 min</td>
 <td>4.6</td>
 <td data-sort-value='10 000'>10 000 kr</td>
@@ -625,7 +625,7 @@ button.bleu {
 	
 	<tr id="div2" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Lendo blancolån</a><br>Ränta 5,2 - 33,93 %</span><br><button class="btn-green lb"><a href="https://www.lendo.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Annuitetslån 12 år. Effektiv årsränta 6.98 %. Ett lån på 200 000 kr kostar då 2032 kr/månad (144 avbetalningar), dvs totalt 292 653 kr. Ingen start-/aviavgift. 6.77 % nominell ränta (rörlig ränta, sätts individuellt baserat på dina förutsättningar). Ansökan kommer att skickas till de kreditgivare som bäst matchar din profil, uppdaterat 2023-03-01. Återbetalningstid 1-15 år. Maximala räntan är 32,49%. Räntespann mellan: 3,25%-32,49%.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lendo.webp" width="200" height="100" alt=""> </td></tr>                   
+	 <span class="lender-title">Lendo blancolån</a><br>Ränta 5,2 - 33,93 %</span><br><button class="btn-green lb"><a href="https://www.lendo.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Annuitetslån 12 år. Effektiv årsränta 6.98 %. Ett lån på 200 000 kr kostar då 2032 kr/månad (144 avbetalningar), dvs totalt 292 653 kr. Ingen start-/aviavgift. 6.77 % nominell ränta (rörlig ränta, sätts individuellt baserat på dina förutsättningar). Ansökan kommer att skickas till de kreditgivare som bäst matchar din profil, uppdaterat 2023-03-01. Återbetalningstid 1-15 år. Maximala räntan är 32,49%. Räntespann mellan: 3,25%-32,49%.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/lendo.webp" width="200" height="100" alt=""> </td></tr>                   
 </table>
 <div id="month">[april 2025]</div>
 		 
@@ -954,7 +954,7 @@ button.bleu {
  
 <p><a href="https://lastoffer.net/kontakta-oss/">Kontakt</a></p> 
  
- <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/tps://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
+ <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
 </div>
 	
 		<div class="ftbox"><h5>Utgivare</h5>
@@ -972,7 +972,7 @@ button.bleu {
  </div> 	<div class="bajo">
 	
 	<div class="ft3"> 
- 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/tps://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
+ 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
 </div>
 		
 	</div></div>
