--- a/direkt-utbetalning-handelsbanken/index.html
+++ b/direkt-utbetalning-handelsbanken/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><head>
+<!DOCTYPE html><head><head>
  
   
  	 
@@ -508,7 +508,7 @@ window.addEventListener(
 	</ol></div></div></div><section><div class="lan vinnare"><h2><div class="unskew">Topplista Handelsbanken</div></h2></div><div class="cell rekommenderade"><p>Topplista för rekommenderade och utvalda  Handelsbanken  2024. För hjälp att få okomplicerat  Handelsbanken med hög servicenivå tipsar vi om följande: <ol class="reko"><li><a href=https://lastoffer.net/northmill/>Northmill</a><span class="separator"> – </span>Banken som gör det bättre<span class="separator"> – </span>Före kl. 13:30 samma dag</li><li><a href=https://lastoffer.net/ferratum/>Ferratum</a><span class="separator"> – </span>Mer än pengar till alla<span class="separator"> – </span>Direktutbetalning till de fyra storbankerna.</li><li><a href=https://lastoffer.net/lanekoll/>Lånekoll</a><span class="separator"> – </span>Förbättra dina lån<span class="separator"> – </span>Direktutbetalning – du slipper vänta</li><li><a href=https://lastoffer.net/lumify/>Lumify</a><span class="separator"> – </span>Direktutbetalningar 24/7 alla dagar<span class="separator"> – </span>Direktutbetalningar 24/7</li></ol></div><div class="lan">
 <h2><div class="unskew">Erbjudande:  Handelsbanken</div></h2>
 </div><div class="row"> <span class="tooltip" data-tooltip="Annonsörer på den här webbplatsen följer konsumentverkets rekommendationer för annonsering om lån och krediter.">?</span>
-<div class="list-item cell block"><div class="pophd"> Northmill</div><span class="popl">populärt val</span><div class="img-wrapper"><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/northmill.webp" width="300" height="auto" alt="Northmill"></div></a><div class="table-container" style="min-width: fit-content;"><table class="table-container__table"><tbody>
+<div class="list-item cell block"><div class="pophd"> Northmill</div><span class="popl">populärt val</span><div class="img-wrapper"><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/northmill.webp" width="300" height="auto" alt="Northmill"></div></a><div class="table-container" style="min-width: fit-content;"><table class="table-container__table"><tbody>
  <tr><th>Belopp</th> <td>1 000 - 50 000 kr</td></tr>
  <tr><th>Ränta</th>
 
@@ -534,7 +534,7 @@ button.bleu {
 </style>
 <div style="display:none"  id="showall" class="cell block">
 <ul class="showall">
-<li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/ferratum.webp" width="300" height="auto" alt="Ferratum"><br> <span class="lender-title"><a href="https://lastoffer.net/ferratum/"  >Ferratum Handelsbanken</a>  - fast ränta 40,5 %</span><br><button class="btn-green lb"><a href="https://www.ferratum.se/" rel="sponsored" >Till ansökan</a></button><br>Utnyttjad kredit om 25 000 kr i 12 månader, totalt belopp att återbetala 30 890 kr (snitt 2 574 kr per månad). Effektiv årsränta: 53  %. Kontokredit med variabel nominell årsränta på 44 %. Övriga avgifter: Uppläggningsavgift 0 kr. </li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lanekoll.webp" width="300" height="auto" alt="Lånekoll"><br> <span class="lender-title"><a href="https://lastoffer.net/lanekoll/"  >Lånekoll Handelsbanken</a> - från 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br>Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lumify.webp" width="300" height="auto" alt="Lumify"><br> <span class="lender-title"><a href="https://lastoffer.net/lumify/"  >Lumify Handelsbanken</a>  - fast ränta 40,25 %</span><br><button class="btn-green lb"><a href="https://www.lumify.se/" rel="sponsored" >Till ansökan</a></button><br>En kredit på 9 500 kr till 44,00 % ränta med en återbetalningstid på tio månader (med tio återbetalningar om 1 880 kr, 1 547 kr, 1 510 kr, 1 473 kr, 1 436 kr, 1 399 kr, 1 362 kr, 1 325 kr, 1 288 kr samt 1 251 kr) och 1 105 kr i uppläggningsavgift, 1 155 kr i Lägst att betala-belopp samt 600 kr i aviavgifter ger en effektiv ränta på totalt 188,16 %. Det totala beloppet att återbetala är 14 670 kr. Kreditens löptid och där tillhörande kostnader kan komma att förändras vid utökning av krediten.</li>
+<li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/ferratum.webp" width="300" height="auto" alt="Ferratum"><br> <span class="lender-title"><a href="https://lastoffer.net/ferratum/"  >Ferratum Handelsbanken</a>  - fast ränta 40,5 %</span><br><button class="btn-green lb"><a href="https://www.ferratum.se/" rel="sponsored" >Till ansökan</a></button><br>Utnyttjad kredit om 25 000 kr i 12 månader, totalt belopp att återbetala 30 890 kr (snitt 2 574 kr per månad). Effektiv årsränta: 53  %. Kontokredit med variabel nominell årsränta på 44 %. Övriga avgifter: Uppläggningsavgift 0 kr. </li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/lanekoll.webp" width="300" height="auto" alt="Lånekoll"><br> <span class="lender-title"><a href="https://lastoffer.net/lanekoll/"  >Lånekoll Handelsbanken</a> - från 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br>Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</li><li><img decoding="async" loading="lazy" src="https://lastoffer.net/adbilder/lumify.webp" width="300" height="auto" alt="Lumify"><br> <span class="lender-title"><a href="https://lastoffer.net/lumify/"  >Lumify Handelsbanken</a>  - fast ränta 40,25 %</span><br><button class="btn-green lb"><a href="https://www.lumify.se/" rel="sponsored" >Till ansökan</a></button><br>En kredit på 9 500 kr till 44,00 % ränta med en återbetalningstid på tio månader (med tio återbetalningar om 1 880 kr, 1 547 kr, 1 510 kr, 1 473 kr, 1 436 kr, 1 399 kr, 1 362 kr, 1 325 kr, 1 288 kr samt 1 251 kr) och 1 105 kr i uppläggningsavgift, 1 155 kr i Lägst att betala-belopp samt 600 kr i aviavgifter ger en effektiv ränta på totalt 188,16 %. Det totala beloppet att återbetala är 14 670 kr. Kreditens löptid och där tillhörande kostnader kan komma att förändras vid utökning av krediten.</li>
 </ul></div>
 <script>function showlist() {
   var x = document.getElementById("showall");
@@ -591,7 +591,7 @@ button.bleu {
 	
 	<tr id="div0" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Northmill Handelsbanken</a><br>Ränta 7,9 - 25,9 %</span><br><button class="btn-green lb"><a href="https://northmill.com/se/kontokredit/affiliate" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Vid kredit om 50 000 kr till 16,9 % årsränta under fem år med 60 återbetalningar, en uttagsavgift om 195 kr samt en administrativ avgift om 19 kr per månad blir totalt belopp att återbetala 75 827 kr. Kreditbeloppet, antalet återbetalningar, uttagsavgiften och räntan för kundens lån kan avvika från ovan angivna exempel. Det totala belopp som kunden ska betala beror på hur kontokrediten utnyttjas.</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/northmill.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/ferratum/>Ferratum</a> <p><button class="mminfo" id="bt1" onclick="myFunction('div1')">Läs mer</button></p></th>
+	 <span class="lender-title">Northmill Handelsbanken</a><br>Ränta 7,9 - 25,9 %</span><br><button class="btn-green lb"><a href="https://northmill.com/se/kontokredit/affiliate" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Vid kredit om 50 000 kr till 16,9 % årsränta under fem år med 60 återbetalningar, en uttagsavgift om 195 kr samt en administrativ avgift om 19 kr per månad blir totalt belopp att återbetala 75 827 kr. Kreditbeloppet, antalet återbetalningar, uttagsavgiften och räntan för kundens lån kan avvika från ovan angivna exempel. Det totala belopp som kunden ska betala beror på hur kontokrediten utnyttjas.</td><td colspan="2"><img decoding="async" src="https://lastoffer.net/adbilder/northmill.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/ferratum/>Ferratum</a> <p><button class="mminfo" id="bt1" onclick="myFunction('div1')">Läs mer</button></p></th>
 <td>Högst beviljandegrad</td>
 <td>3.8</td>
 <td data-sort-value='1 000'>1 000 kr</td>
@@ -608,7 +608,7 @@ button.bleu {
 	
 	<tr id="div1" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Ferratum Handelsbanken</a><br>Fast ränta 40,5 %</span><br><button class="btn-green lb"><a href="https://www.ferratum.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Utnyttjad kredit om 25 000 kr i 12 månader, totalt belopp att återbetala 30 890 kr (snitt 2 574 kr per månad). Effektiv årsränta: 53  %. Kontokredit med variabel nominell årsränta på 44 %. Övriga avgifter: Uppläggningsavgift 0 kr. </td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/ferratum.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lanekoll/>Lånekoll</a> <p><button class="mminfo" id="bt2" onclick="myFunction('div2')">Läs mer</button></p></th>
+	 <span class="lender-title">Ferratum Handelsbanken</a><br>Fast ränta 40,5 %</span><br><button class="btn-green lb"><a href="https://www.ferratum.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Utnyttjad kredit om 25 000 kr i 12 månader, totalt belopp att återbetala 30 890 kr (snitt 2 574 kr per månad). Effektiv årsränta: 53  %. Kontokredit med variabel nominell årsränta på 44 %. Övriga avgifter: Uppläggningsavgift 0 kr. </td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/ferratum.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lanekoll/>Lånekoll</a> <p><button class="mminfo" id="bt2" onclick="myFunction('div2')">Läs mer</button></p></th>
 <td>Direktutbetalning</td>
 <td>4.9</td>
 <td data-sort-value='10 000'>10 000 kr</td>
@@ -625,7 +625,7 @@ button.bleu {
 	
 	<tr id="div2" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Lånekoll Handelsbanken</a><br>Ränta 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lanekoll.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lumify/>Lumify</a> <p><button class="mminfo" id="bt3" onclick="myFunction('div3')">Läs mer</button></p></th>
+	 <span class="lender-title">Lånekoll Handelsbanken</a><br>Ränta 5,25 - 29,5 %</span><br><button class="btn-green lb"><a href="https://www.lanekoll.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">Räkneexempel om annuitetslån på 300 000 kr med start-/aviavgift 0kr, återbetalningstid 15år, rörlig ränta 7,0%, effektiv ränta 7,23% ger (180) månadsbetalningar om 2696 kr totalt betalningsbelopp 485 367 kr. Räntor: 20230826.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/lanekoll.webp" width="200" height="100" alt=""> </td></tr>                 <th scope="row"><a href=https://lastoffer.net/lumify/>Lumify</a> <p><button class="mminfo" id="bt3" onclick="myFunction('div3')">Läs mer</button></p></th>
 <td>Snabba beslut</td>
 <td>-</td>
 <td data-sort-value='2 000'>2 000 kr</td>
@@ -642,7 +642,7 @@ button.bleu {
 	
 	<tr id="div3" style="display:none;"><td colspan="2"> 
 	 	
-	 <span class="lender-title">Lumify Handelsbanken</a><br>Fast ränta 40,25 %</span><br><button class="btn-green lb"><a href="https://www.lumify.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">En kredit på 9 500 kr till 44,00 % ränta med en återbetalningstid på tio månader (med tio återbetalningar om 1 880 kr, 1 547 kr, 1 510 kr, 1 473 kr, 1 436 kr, 1 399 kr, 1 362 kr, 1 325 kr, 1 288 kr samt 1 251 kr) och 1 105 kr i uppläggningsavgift, 1 155 kr i Lägst att betala-belopp samt 600 kr i aviavgifter ger en effektiv ränta på totalt 188,16 %. Det totala beloppet att återbetala är 14 670 kr. Kreditens löptid och där tillhörande kostnader kan komma att förändras vid utökning av krediten.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/tps://lastoffer.net/adbilder/lumify.webp" width="200" height="100" alt=""> </td></tr>                   
+	 <span class="lender-title">Lumify Handelsbanken</a><br>Fast ränta 40,25 %</span><br><button class="btn-green lb"><a href="https://www.lumify.se/" rel="sponsored" >Till ansökan</a></button><br></td><td colspan="6">En kredit på 9 500 kr till 44,00 % ränta med en återbetalningstid på tio månader (med tio återbetalningar om 1 880 kr, 1 547 kr, 1 510 kr, 1 473 kr, 1 436 kr, 1 399 kr, 1 362 kr, 1 325 kr, 1 288 kr samt 1 251 kr) och 1 105 kr i uppläggningsavgift, 1 155 kr i Lägst att betala-belopp samt 600 kr i aviavgifter ger en effektiv ränta på totalt 188,16 %. Det totala beloppet att återbetala är 14 670 kr. Kreditens löptid och där tillhörande kostnader kan komma att förändras vid utökning av krediten.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://lastoffer.net/adbilder/lumify.webp" width="200" height="100" alt=""> </td></tr>                   
 </table>
 <div id="month">[april 2025]</div>
 		 
@@ -1043,7 +1043,7 @@ button.bleu {
  
 <p><a href="https://lastoffer.net/kontakta-oss/">Kontakt</a></p> 
  
- <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/tps://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
+ <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
 </div>
 	
 		<div class="ftbox"><h5>Utgivare</h5>
@@ -1061,7 +1061,7 @@ button.bleu {
  </div> 	<div class="bajo">
 	
 	<div class="ft3"> 
- 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/tps://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
+ 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
 </div>
 		
 	</div></div>
