--- a/ferratum/index.html
+++ b/ferratum/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><head>
+<!DOCTYPE html><head><head>
  
   
  	 
@@ -140,7 +140,7 @@
 <div class="cell left"> 
 <div class="grey"> 
 <div class="button-group"><div class="gem"></div>
-<span class='data-value' itemprop="logo"><img decoding="async" alt="Ferratum" class="loggy" src="https://lastoffer.net/tps://lastoffer.net/adbilder/ferratum.webp"></span><br>
+<span class='data-value' itemprop="logo"><img decoding="async" alt="Ferratum" class="loggy" src="https://lastoffer.net/adbilder/ferratum.webp"></span><br>
  	<a class="large red button" href="https://www.ferratum.se/" rel="nofollow noopener" target="_blank"><span class='data-value' itemprop="name">Ferratum</span> &#128279;</a>
  	 <div class="tump">
  
@@ -184,7 +184,7 @@
 	  </div>     
 			  
  <div class="row"></div> <div class="row"><div class="cell femhundra hogk">
-		 <img decoding="async" alt="Högkostnadskredit"   src="https://lastoffer.net/tps://lastoffer.net/media/hogkostnadskredit.webp" width="103" height="85"> 
+		 <img decoding="async" alt="Högkostnadskredit"   src="https://lastoffer.net/media/hogkostnadskredit.webp" width="103" height="85"> 
 		Om du inte kan betala tillbaka hela skulden riskerar du en betalningsanmärkning. För stöd, vänd dig till budget- och skuldrådgivningen i din kommun. Kontaktuppgifter finns på hallåkonsument.se</div>
   
 	</div></div>
@@ -196,28 +196,28 @@
 <div class="cell">
 <h3>Ferratum Trustpilot</h3>
 <p>Omdömen: 667</p>Trustpilot betyg:  3,8 av 5 (76 %)</p>
-<div class="trust"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/media/trustpilotbg.webp" height="50px" width="250px" alt="Trustpilot ger Ferratum betyg 3.8 av 5" title="Trustpilot ger Ferratum betyg 3.8 av 5"></div> 
+<div class="trust"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="50px" width="250px" alt="Trustpilot ger Ferratum betyg 3.8 av 5" title="Trustpilot ger Ferratum betyg 3.8 av 5"></div> 
 </div>
 
 <div class="cell rew">
  <p>2023-07-23</p>
 	 <h4>Snabb och smidig hjälp och ett STORT…</h4>
 	 <p>Snabb och smidig hjälp och ett STORT Pluss är att dom har den lägsta räntan när det kommer till kontokredit och du vill ta ett snabbt lån och slippa uc!</p>	
-	<div class="betyg_1"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
+	<div class="betyg_1"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
  	</div>
 
 <div class="cell rew">
 	<p>2023-07-23</p>
 		<h4>Smidigt och snabbt….men dyrt.</h4>
 		<p>Snabb återkoppling och trevligt bemötande. Dock till ett högt pris.</p>	
-	<div class="betyg_2"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 4" title="Kund ger Ferratum betyg 4 av 5"></div>
+	<div class="betyg_2"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 4" title="Kund ger Ferratum betyg 4 av 5"></div>
  </div>
 
 <div class="cell rew">
  <p>2023-07-26</p>
  <h4>De var trevliga och mänskliga vilket…</h4>
 	 <p>De var trevliga och mänskliga vilket inte min egen bank var. Jag rekommenderar dig som behöver att välja denna långivare.</p>	
-	<div class="betyg_3"><img decoding="async" src="https://lastoffer.net/tps://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
+	<div class="betyg_3"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
  </div>
  
 <style>
@@ -870,7 +870,7 @@ window.addEventListener(
  
 <p><a href="https://lastoffer.net/kontakta-oss/">Kontakt</a></p> 
  
- <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/tps://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
+ <p><a target="_blank" href="https://www.linkedin.com/company/lastoffer-network/"><img src="https://lastoffer.net/media/linkedin.webp" width="32" height="32"></a></p>
 </div>
 	
 		<div class="ftbox"><h5>Utgivare</h5>
@@ -888,7 +888,7 @@ window.addEventListener(
  </div> 	<div class="bajo">
 	
 	<div class="ft3"> 
- 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/tps://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
+ 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
 </div>
 		
 	</div></div>
